--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ install:
   - pip install -r requirements.txt
 
 script: nikola build
+
+after_success:
   - cd output
   # - git config --global user.email ${GH_EMAIL}
   # - git config --global user.name ${GH_NAME}
