--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ script: nikola list
 
 after_success:
   - cd output
-  # - git config --global user.email ${GH_EMAIL}
-  # - git config --global user.name ${GH_NAME}
+  - git config --global user.email ${GH_EMAIL}
+  - git config --global user.name ${GH_NAME}
   - git add *
   - git commit -m "Travis CI autocommit from travis build ${TRAVIS_BUILD_NUMBER}"
   - git push origin master
