--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 before_script:
   - git config --global user.email "travis-ci@travis.org"
   - git config --global user.name "me via travis ci"
+  - rm -rf output
   - git clone --quiet https://${GH_TOKEN}@github.com/sebastian-schmidt/sebastian-schmidt.github.io -b master output > /dev/null
 
 script:
