change travis ci build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,30 @@
 language: python
-
 python:
-  - '3.4'
-  
+- '3.4'
 cache: pip
-
 install:
-  - pip install -r requirements.txt
-
+- pip install -r requirements.txt
 before_script:
-  - git config --global user.email "travis-ci@travis.org"
-  - git config --global user.name "me via travis ci"
-  - rm -rf output
-  - git clone --quiet https://${GH_TOKEN}@github.com/sebastian-schmidt/sebastian-schmidt.github.io -b master output > /dev/null
-
+- git config --global user.email "travis-ci@travis.org"
+- git config --global user.name "me via travis ci"
+- rm -rf output
+- git clone --quiet https://${GH_TOKEN}@github.com/sebastian-schmidt/sebastian-schmidt.github.io
+  -b master output > /dev/null
 script:
-  - nikola clean
-  - nikola build
-
+- nikola clean
+- nikola build
 after_success:
-  - cd output
-  - git add .
-  - git commit -m "[ci skip] Update output from Travis CI"
-  - git push origin master
-
+- cd output
+- git add .
+- git commit -m "[ci skip] Update output from Travis CI"
+- git push origin master
 env:
   global:
     secure: DhIbCchXKNCP/0V7Px84qc1b92y9DWdkgkK8q2OjkjpnoDsD6bWP/4D6lcVOIqnq+I4FS1b2t4ZAcQ0O1iFMnOgTjkU4VJB5c+HVsksHM/fQljOBg+P6AQfu4pE+/kgb9bV4RSgFKybul7CZOHRVP6FseM2uRh15Yve7fX/GjbE=
+deploy:
+  provider: releases
+  api_key:
+    secure: HEQIj/cPFBTjInmDw0hh219BwkpCF4dkEMe/69VUnq/vrQelSt/Dvbn+ItW6WWAVLhhcVXuAU9+GDNDmdov0SMuSbJa08iNo8EaaADGu1rtLaYE9hhPFgZOTXB8BKu5yG9nOG2x3TAxEVr64K/RJXsyDaD/nnFjRVOqdo6rckKE=
+  file: ''
+  on:
+    repo: sebastian-schmidt/blog
